<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">君和中医</string>

    <string name="home_workroom">工作室</string>
    <string name="home_patient">患者</string>
    <string name="home_find">发现</string>
    <string name="home_me">我</string>
    <string name="str_jpg_png_gif">格式为jpg/png/gif</string>
    <string name="str_check">1.我们会将在72小时内，对您提交的资料进行审核。 \n2.审核通过后，我们会将信息发到您的手机，请注意查收。 \n3.审核未通过，客服会联系您，请在审核期间请保持电话畅通。 \n4.如需帮助，请拨打客服电话 021-55880623 。</string>
    <string name="str_share_app">我在使用【君和中医】APP，非常方便的，赶快下载吧！</string>
    <string name="str_check_paper">审核处方</string>
    <string name="str_paper_detail">处方详情</string>


    <!--网易IM nim-->
    <string name="on_line">在线</string>
    <string name="on_line_pc">PC在线</string>
    <string name="on_line_mac">Mac在线</string>
    <string name="on_line_web">web在线</string>
    <string name="client_aos">Android</string>
    <string name="client_ios">iOS</string>
    <string name="on_line_busy">忙碌</string>
    <string name="off_line">离线</string>
    <string name="str_auth_0">未认证</string>
    <string name="str_auth_msg_0">认证后可以获得更多权限</string>
    <string name="str_auth_1">审核中...</string>
    <string name="str_auth_msg_1">请耐心等待</string>
    <string name="str_auth_3">认证失败</string>
    <string name="str_auth_msg_3">请重新认证</string>
    <string name="str_notice1">因医院工作繁忙，未能及时回复，敬请谅解。</string>
    <string name="str_notice2">本人近期停诊，恢复时间待定，给您造成不便，敬请谅解，如有疑问，请联系君和客服。</string>
    <string name="str_notice3">您的健康，我的责任，让我们共同关注身体健康，欢迎新老患者前来咨询。</string>
    <string name="str_notice4">感谢您光临我的诊室，针对您的咨询，我会及时认真的回复。</string>
    <string name="str_autu_no">您尚未认证，认证后可获取更多权限！</string>
    <string name="str_auth_ing">您的认证信息正在审核中，请耐心等待！</string>

    <!-- 云信SDK所需文案 -->
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>


    <!-- session -->
    <string name="input_panel_askpaper">问诊单</string>
    <string name="input_panel_followpaper">随诊单</string>
    <string name="input_panel_openpaper_camera">拍照开方</string>
    <string name="input_panel_openpaper_online">在线开方</string>
    <string name="input_panel_image">照片</string>
    <string name="input_panel_camera">拍照</string>
    <string name="input_panel_quickreply">快速回复</string>
    <string name="input_panel_close">结束咨询</string>


    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_ack_msg">已读回执</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>

    <!-- 通讯录 -->
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>

    <!-- 群 -->
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="team_num_limit">群数量已达上限</string>

    <!-- 消息提醒 -->

    <!-- 自定义通知 -->
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>

    <!-- location -->
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>

    <string name="str_drug_type">药材列表中包含%s多个药材类型，请修改后保存</string>

    <!-- about -->
    <string name="about_clear_msg_history">清空所有聊天记录</string>
    <string name="clear_msg_history_success">聊天记录已清空</string>
    <string name="str_adddrug_ps">提示：普通中药转换为精品中药时，如无对应精品中药，原处方普通中药将保留。\n例如：普通中药“葛根”转换成精品中药为“葛根(精品)”，如无对应精品中药仍保留为普通中药“葛根”。</string>
    <string name="str_money_list">费用明细<font color='#f5a623' size='12'>(不含运费、代煎费、加工费)</font></string>
    <string name="str_setting_price">是否开通在线咨询\n<font color='#f5a623' size='14'>关闭后将无法与患者进行在线咨询</font></string>

    <!--开方menu文字-->
    <string-array name="openonline_menu">
        <item>中药饮片</item>
        <item>颗粒剂</item>
        <item>定制膏方</item>
        <item>定制丸剂</item>
        <item>打粉制撒</item>
        <item>中成（西）药</item>
    </string-array>

    <string-array name="guide_1">
        <item>引导1</item>
        <item>引导2</item>
        <item>引导3</item>
    </string-array>

</resources>
