<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f6f6"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="start"
                android:hint="请输入您的简介"
                android:maxLength="300"
                android:minHeight="160dp"
                android:padding="15dp"
                android:textColor="@color/color_333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right"
                android:paddingBottom="15dp"
                android:paddingRight="15dp"
                android:text="0/300"
                android:textColor="@color/color_999"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="常用语："
                android:textColor="@color/color_333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_notice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_bg_white"
                android:padding="8dp"
                android:text="@string/str_notice1"
                android:textColor="@color/color_333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_notice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_bg_white"
                android:padding="8dp"
                android:text="@string/str_notice2"
                android:textColor="@color/color_333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_notice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_bg_white"
                android:padding="8dp"
                android:text="@string/str_notice3"
                android:textColor="@color/color_333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_notice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_bg_white"
                android:padding="8dp"
                android:text="@string/str_notice4"
                android:textColor="@color/color_333"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
